<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_in_dialog"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"

        android:paddingRight="10dp">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etDialogEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="Email"
            android:singleLine="true"
            android:textColor="@android:color/black"
            app:met_floatingLabelText="Email"
            app:met_iconLeft="@drawable/ic_face_black_24dp"
       />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etDialogPassword"
android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="Password"
            android:textColor="@android:color/black"
            app:met_floatingLabelText="Password"
            app:met_iconLeft="@drawable/ic_lock_black_24dp" />


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/sign_up_button"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="SignIn"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>