<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/MyRcyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>
